--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/AlexRazor1337/weather-app#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "hbs": "^4.1.2",
     "postman-request": "^2.88.1-postman.30"
   }
 }
